--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "schoenef/here-api-connector",
   "description": "A php library to connect to the here api server side",
-  "licence": "MIT",
+  "license": "MIT",
   "require": {
     "php": "^7.4",
     "guzzlehttp/guzzle": "^6.5"
